# maintainance_reminder

./: .gitignore  Cargo.toml  config.toml  progress.org
.github/workflows/: rust.yml
src/: client.rs  config.rs  database.rs  inspection.rs  mail.rs  main.rs
templates/: base.html.tera  edit.html.tera  index.html.tera
