[package]
name = "maintainance_reminder"
version = "0.1.0"
authors = ["Ignas Lapėnas <ignas@lapenas.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
lettre = ""
log = "0.4.11"
native-tls = ""
regex = "1.4.2"
serde = {version = "1.0.1", features = ["derive"]}
simplelog = "0.9.0"
sqlite = "0.25.3"
toml = "0.5.8"
